updated commands